added forms to controller, converted getAll res.json to res.render. tested. working.

--- a/views/singleVoyage.hbs
+++ b/views/singleVoyage.hbs
@@ -12,5 +12,5 @@
 </a>
 <form action="/voyage/{{_id}}?_method=DELETE" method="POST">
     <input type="submit" value="Delete Voyage"/>
- </form> {{!--this is working --}}
+ </form> 
 <a href="/voyage">Go Back</a>
