--- a/views/voyage/createVoyage.hbs
+++ b/views/voyage/createVoyage.hbs
@@ -1,4 +1,4 @@
-<h1> Create New voyage</h1>
+<h1> Create New Voyage</h1>
 <form action="/voyage" method="POST">
     <input type="text" name="nameTrip" placeholder="nameTrip" /> <br>
     <input type="text" name="whereFrom" placeholder="whereFrom" /> <br>
