updated to create parent child relationship between user and voyage. removed unnessissary delete view. worked with CSS (not affecting page but is linking)

--- a/views/legger/allLegger.hbs
+++ b/views/legger/allLegger.hbs
@@ -1,8 +1,8 @@
-<h1>Leggerr</h1>
-<a href="/legger/new/">Add Issue</a>
+<h1>Legger</h1>
+<a href="/legger/new/">Add Leg</a>
 <ol>
 {{#each allLegger}}
-<a href="/legger/{{_id}}"/>
-    <li>{{nameTrip}}</li>
+<a href="/legger/{{_id}}">
+    <li>{{leg}}</li> </a>
 {{/each}}
 </ol>
