--- a/views/legger/createLegger.hbs
+++ b/views/legger/createLegger.hbs
@@ -1,10 +1,11 @@
 <h1> Create New Legger</h1>
 <form action="/legger" method="POST">
-    <input type="text" name="nameTrip" placeholder="nameTrip" /> <br>
-    <input type="text" name="whereFrom" placeholder="whereFrom" /> <br>
-    <input type="text" name="whereTo" placeholder="whereTo" /> <br>
-    <input type="date" name="dateStart" placeholder="dateStart" /> <br>
-    <input type="date" name="dateEnd" placeholder="dateEnd" /> <br>
-    <input type="boolean" name="flexibleDate" placeholder="flexibleDate" /> <br>
+    <input type="text" name="leg" placeholder="leg" /> <br>
+    <input type="text" name="hubInitial" placeholder="hubInitial" /> <br>
+    <input type="text" name="hubTerminus" placeholder="hubTerminus" /> <br>
+    <input type="Boolean" name="direction" placeholder="direction" /> <br>
+    <input type="Boolean" name="oneWayOrRoundTrip" placeholder="oneWayOrRoundTrip" /> <br>
+    <input type="text" name="methodOfTransport" placeholder="methodOfTransport" /> <br>
+    <input type="number" name="costOfLeg" placeholder="costOfLeg" /> <br>
     <input type="submit" value="Save"/>
 </form>
