--- a/views/legger/singleLegger.hbs
+++ b/views/legger/singleLegger.hbs
@@ -1,10 +1,11 @@
 <h1>{{_id}}</h1>
-<p> nameTrip: {{nameTrip}}</p>
-<p> whereFrom: {{whereFrom}}</p>
-<p> whereTo: {{whereTo}}</p>
-<p> dateStart: {{dateStart}} </p>
-<p> dateEnd: {{dateEnd}} </p>
-<p> flexibleDate: {{flexibleDate}} </p>
+<p> leg: {{leg}}</p>
+<p> hubInitial: {{hubInitial}}</p>
+<p> hubTerminus: {{hubTerminus}}</p>
+<p> direction: {{direction}} </p>
+<p> oneWayOrRoundTrip: {{oneWayOrRoundTrip}} </p>
+<p> methodOfTransport: {{methodOfTransport}} </p> 
+<p> costOfLeg: {{costOfLeg}} </p>
 <a href="/legger/edit/{{_id}}">
         <button>
                 Edit Legger
