--- a/views/voyage/editFormVoyage.hbs
+++ b/views/voyage/editFormVoyage.hbs
@@ -1,4 +1,4 @@
-<form action="/voyage/{{_id}}?_method=PUT" method="POST">
+<form action="/voyage/{{singleVoyage._id}}?_method=PUT" method="POST">
     <input type="text" name="nameTrip" placeholder="nameTrip" value="{{nameTrip}}"/> <br>
     <input type="text" name="whereFrom" placeholder="whereFrom" value="{{whereFrom}}"/> <br>
     <input type="text" name="whereTo" placeholder="whereTo" value="{{whereTo}}"/> <br>
