--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,9 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Voyage App</title>
-    <link rel="stylesheet" href="/styles.css" type="text/css">
+    <link rel="stylesheet" href="../public/style.css" type="text/css">
 </head>
 <body>
+    <h1> This will be the header</h1>
+    <br>
     {{{body}}}
+    <br>
+    <h2> this will be the footer</h2>
 </body>
 </html>
