--- a/views/voyage/allVoyage.hbs
+++ b/views/voyage/allVoyage.hbs
@@ -1,5 +1,5 @@
 <h1>Voyager</h1>
-<a href="/voyage/new/">Add Issue</a>
+<a href="/voyage/new/">Add Voyage</a>
 <ol>
 {{#each allVoyage}}
 <a href="/voyage/{{_id}}"/>
