corrected issues with routes caused during reverting

--- a/views/user/singleUser.hbs
+++ b/views/user/singleUser.hbs
@@ -1,7 +1,7 @@
-<h1>{{singleUser._id}}</h1>
-<p> user: {{singleUser.user}}</p>
-<p> password: {{singleUser.password}}</p>
-<p> voyageId: {{singleUser.voyageId}}</p>
+<h1>{{_id}}</h1>
+<p> user: {{user}}</p>
+<p> password: {{password}}</p>
+{{!-- <p> voyageId: {{voyageId}}</p> --}}
 <a href="/user/edit/{{_id}}">
         <button> Edit User </button>
 </a>
