--- a/views/user/singleUser.hbs
+++ b/views/user/singleUser.hbs
@@ -1,6 +1,7 @@
 <h1>{{_id}}</h1>
 <p> user: {{user}}</p>
 <p> password: {{password}}</p>
+<p> <a href="/voyage">Go to Voyages</a></p>
 {{!-- <p> voyageId: {{voyageId}}</p> --}}
 <a href="/user/edit/{{_id}}">
         <button> Edit User </button>
