formated hbs, editied style and connection to css

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Voyage App</title>
-    <link rel="stylesheet" href="../public/style.css" type="text/css">
+    <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
+<wrapper>
 <body>
     <h1> This will be the header</h1>
     <br>
@@ -12,4 +13,5 @@
     <br>
     <h2> this will be the footer</h2>
 </body>
+</wrapper>
 </html>
