--- a/views/legger/createLegger.hbs
+++ b/views/legger/createLegger.hbs
@@ -6,6 +6,7 @@
     <input type="Boolean" name="direction" placeholder="direction" /> <br>
     <input type="Boolean" name="oneWayOrRoundTrip" placeholder="oneWayOrRoundTrip" /> <br>
     <input type="text" name="methodOfTransport" placeholder="methodOfTransport" /> <br>
+    <input type="number" name="timeOfLeg" placeholder="timeOfLeg" /> <br>
     <input type="number" name="costOfLeg" placeholder="costOfLeg" /> <br>
     <input type="submit" value="Save"/>
 </form> 
