--- a/views/legger/editFormLegger.hbs
+++ b/views/legger/editFormLegger.hbs
@@ -5,6 +5,8 @@
     <input type="Boolean" name="direction" placeholder="direction" value="{{direction}}"/> <br>
     <input type="Boolean" name="oneWayOrRoundTrip" placeholder="oneWayOrRoundTrip" value="{{oneWayOrRoundTrip}}"/> <br>
     <input type="text" name="methodOfTransport" placeholder="methodOfTransport" value="{{methodOfTransport}}"/> <br>
+    <input type="number" name="timeOfLeg" placeholder="timeOfLeg(in hours)" value="{{timeOfLeg}}"/> <br>
     <input type="number" name="costOfLeg" placeholder="costOfLeg" value="{{costOfLeg}}"/> <br>
     <input type="submit" value="Save"/>
 </form>
+timeOfLeg
