--- a/views/legger/singleLegger.hbs
+++ b/views/legger/singleLegger.hbs
@@ -5,6 +5,7 @@
 <p> direction: {{direction}} </p>
 <p> oneWayOrRoundTrip: {{oneWayOrRoundTrip}} </p>
 <p> methodOfTransport: {{methodOfTransport}} </p> 
+<p> timeOfLeg (hours): {{timeOfLeg}} </p>
 <p> costOfLeg: {{costOfLeg}} </p>
 <a href="/legger/edit/{{_id}}">
         <button>
