--- a/views/voyage/allVoyage.hbs
+++ b/views/voyage/allVoyage.hbs
@@ -2,7 +2,7 @@
 <a href="/voyage/new/">Add Voyage</a>
 <ol>
 {{#each allVoyage}}
-<a href="/voyage/{{_id}}"/>
-    <li>{{nameTrip}}</li>
+
+    <li><div class="infoBlock"><a href="/voyage/{{_id}}">{{nameTrip}}</a></div></li> 
 {{/each}}
 </ol>
