--- a/views/voyage/singleVoyage.hbs
+++ b/views/voyage/singleVoyage.hbs
@@ -15,6 +15,7 @@
  </form> 
 {{#each voyageUser}}
     <p>{{nameTrip}}</p>
+    <p><a href="/legger">Go to Legs of Voyage</a></p>
 {{/each}}
 
 <a href="/voyage">Go Back</a>
