--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,22 @@ table {
 	border-spacing: 0;
 }
 html {
-    background-color: blue;
+    background-color: rgb(0, 195, 255);
     font: red;
+}
+wrapper {
+	background-color: green;
+	height: 250px;
+	width: 250px;
+}
+body {
+	background-color: blueviolet;
+	display: flex;
+	/* justify-self: center;
+	align-self: center; */
+	justify-content: center;
+	align-items: center;
+	height: 500px;
+	width: 500px;
+	direction: column;
 }
