--- a/views/user/allUser.hbs
+++ b/views/user/allUser.hbs
@@ -6,7 +6,7 @@
 </a>
 <ol>
 {{#each allUser}}
-<a href="/user/{{_id}}"/>
-    <li>{{user}}{{leg}}</li>
+<a href="/user/{{_id}}">
+    <li>{{user}}{{leg}}</li> </a>
 {{/each}}
 </ol>
