--- a/public/style.css
+++ b/public/style.css
@@ -2,20 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -24,8 +11,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
@@ -48,21 +34,72 @@ table {
 }
 html {
     background-color: rgb(0, 195, 255);
-    font: red;
-}
-wrapper {
-	background-color: green;
-	height: 250px;
-	width: 250px;
+	font: #000;
+	display: flex;
+	justify-content: center;
+	height: 100%;	
 }
 body {
 	background-color: blueviolet;
 	display: flex;
-	/* justify-self: center;
-	align-self: center; */
 	justify-content: center;
 	align-items: center;
-	height: 500px;
-	width: 500px;
-	direction: column;
+	height: 100%;
+	width: 98%;
+	flex-direction: column;
+}
+wrapper {
+	background-color: green;
+	height: 98%;
+	width: 98%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.infoBlock {
+	background-color: red;
+	border: 2px solid #000;
+	margin: 1px;
+	height: 100px;
+	width: 100px;
+	font-size: .75em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+.infoBlock:hover {
+	background-color: gray;
+	color: rgba(55, 55, 221, 0.678) ;
+}
+a {
+	color: blue ;
+}
+#container{
+	display: flex;
+	justify-content: space-evenly;
+	align-items: space-between;
+	flex-direction: row;
+	flex-wrap: wrap;
+	background-color: yellow;
+	height: 600px;
+	width: 95%;
+}
+#left, #playTable {
+	background-color: tomato;
+	height: 99.5%;
+	width: 49%;
+	margin: 1px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-content: flex-start;
+}	
+.row {
+	background-color: rgba(221, 55, 221, 0.678);
+	height: 30%;
+	width: 99%;
+	margin-top: 15px;
 }
