editing CSS formating added image and potential js file

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,12 +4,24 @@
     <meta charset="utf-8">
     <title>Voyage App</title>
     <link rel="stylesheet" href="/style.css" type="text/css">
+    <script defer src="/script.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
-<h1> This will be the header</h1>
+<header>
+    <h1> 
+        <a href="/voyage">Trips</a>
+        <a href="/legger">Legs</a>    
+    </h1>
+</header>
 <wrapper>
 <body>
     {{{body}}}
 </body>
 </wrapper>    
-<h2> this will be the footer</h2>
+<footer>
+    <h1> 
+        javalo    
+        <a href="/user">Sign Guestbook</a>
+    </h1>
+</footer>
 </html>
