--- a/views/legger/allLegger.hbs
+++ b/views/legger/allLegger.hbs
@@ -1,6 +1,6 @@
-<h1>Legger</h1>
-<a href="/legger/new/">Add Leg</a>
+    
 <div>Voyage Name</div> 
+<h1>Legs</h1><a href="/legger/new/">Add Leg</a>
 <div id="container">
     <div class="contained" id="left">
     {{#each allLegger}}
@@ -10,8 +10,10 @@
             Hours Traveling: {{timeOfLeg}} <br>
             Initial:{{hubInitial}}<br>
             Terminus:{{hubTerminus}}</a>
+            <img src="../../public/image/plane-icon.png" alt="MF">
         </div>
     {{/each}}
+    <img src="../../public/image/plane-icon.png" alt="MF">
     </div>
     <div class="contained" id="playTable">
         <div class="row" id="1"></div>
