--- a/views/legger/singleLegger.hbs
+++ b/views/legger/singleLegger.hbs
@@ -1,3 +1,5 @@
+<div id="container">
+<div>
 <h1>{{_id}}</h1>
 <p> leg: {{leg}}</p>
 <p> hubInitial: {{hubInitial}}</p>
@@ -16,3 +18,10 @@
     <input type="submit" value="Delete Legger"/>
  </form> 
 <a href="/legger">Go Back</a>
+{{!-- <script>
+        let myParent = 
+        let dropDown = ["Car", "Plane", "Train", "Bus", "Walking", "Biker"]
+
+
+</script> --}}
+</div></div>
