--- a/views/voyage/createVoyage.hbs
+++ b/views/voyage/createVoyage.hbs
@@ -1,4 +1,5 @@
 <h1> Create New Voyage</h1>
+<div id="container">
 <form action="/voyage" method="POST">
     <input type="text" name="nameTrip" placeholder="nameTrip" /> <br>
     <input type="text" name="whereFrom" placeholder="whereFrom" /> <br>
@@ -7,4 +8,4 @@
     <input type="date" name="dateEnd" placeholder="dateEnd" /> <br>
     <input type="boolean" name="flexibleDate" placeholder="flexibleDate" /> <br>
     <input type="submit" value="Save"/>
-</form>
+</form></div>
