--- a/public/style.css
+++ b/public/style.css
@@ -32,24 +32,31 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+:root{
+	--x: 1;
+}
 html {
-    background-color: rgb(0, 195, 255);
+	background-image: url("/image/icons-of-travel.png");
+	background-size: 50%;
+	background-position: -20px;
 	font: #000;
 	display: flex;
 	justify-content: center;
 	height: 100%;	
 }
 body {
-	background-color: blueviolet;
+	background-color: rgba(137, 43, 226, var(--x));
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100%;
 	width: 98%;
 	flex-direction: column;
+	font-family: 'Shadows Into Light', cursive;
+
 }
 wrapper {
-	background-color: green;
+	background-color: rgba(0, 128, 0, var(--x));
 	height: 98%;
 	width: 98%;
 	display: flex;
@@ -57,9 +64,28 @@ wrapper {
 	align-items: center;
 	flex-direction: column;
 }
+header, footer {
+	background-color: rgb(173, 164, 174, 0.835);
+	width: 100%;
+	padding: 10px;
+	font: black;
+	margin: 2px;
+	font-family: 'Shadows Into Light', cursive;
+}
 
+header, footer, .infoBlock, button, input{
+	border-radius: 20px;
+}
+
+header:hover, footer:hover {
+	background-color: rgba(208, 211, 212, 0.835);
+}
+h1 {
+	margin: 0 20px 0 20px;
+	font-size: 2em;
+}
 .infoBlock {
-	background-color: red;
+	background-color: rgba(255, 0, 0, var(--x));
 	border: 2px solid #000;
 	margin: 1px;
 	height: 100px;
@@ -71,24 +97,30 @@ wrapper {
 	text-align: center;
 }
 .infoBlock:hover {
-	background-color: gray;
+	background-color: rgba(128, 128, 128, var(--x));
 	color: rgba(55, 55, 221, 0.678) ;
 }
 a {
 	color: blue ;
 }
-#container{
+header h1 a, footer h1 a {
+	color: whitesmoke;
+}
+header h1 a:hover, footer h1 a:hover {
+	color: black;
+}
+#container {
 	display: flex;
 	justify-content: space-evenly;
 	align-items: space-between;
 	flex-direction: row;
 	flex-wrap: wrap;
-	background-color: yellow;
-	height: 600px;
+	background-color: rgba(255, 255, 0, var(--x));
+	height: 75%;
 	width: 95%;
 }
 #left, #playTable {
-	background-color: tomato;
+	background-color: rgba(255, 99, 71, var(--x));
 	height: 99.5%;
 	width: 49%;
 	margin: 1px;
@@ -98,8 +130,15 @@ a {
 	align-content: flex-start;
 }	
 .row {
-	background-color: rgba(221, 55, 221, 0.678);
+	background-color: rgba(221, 55, 221, var(--x));
 	height: 30%;
 	width: 99%;
 	margin-top: 15px;
+}
+button, input {
+	background-color: rgb(240, 255, 224);
+}
+#allusercon div {
+	display: flex;
+	flex-direction: row;
 }
