--- a/views/legger/createLegger.hbs
+++ b/views/legger/createLegger.hbs
@@ -1,12 +1,27 @@
 <h1> Create New Legger</h1>
+<div id="container">
 <form action="/legger" method="POST">
     <input type="text" name="leg" placeholder="leg" /> <br>
     <input type="text" name="hubInitial" placeholder="hubInitial" /> <br>
     <input type="text" name="hubTerminus" placeholder="hubTerminus" /> <br>
     <input type="Boolean" name="direction" placeholder="direction" /> <br>
     <input type="Boolean" name="oneWayOrRoundTrip" placeholder="oneWayOrRoundTrip" /> <br>
-    <input type="text" name="methodOfTransport" placeholder="methodOfTransport" /> <br>
+    <input name="methodOfTransport" required="required" list="transportMethods" placeholder="methodOfTransport" />
+        <datalist id="transportMethods">
+            <option value="Automobile">
+            <option value="Bike"> 
+            <option value="Boat">
+            <option value="Bus">
+            <option value="Plane">
+            <option value="Train">
+            <option value="Walk">
+            </option>
+        </datalist> <br>
     <input type="number" name="timeOfLeg" placeholder="timeOfLeg" /> <br>
     <input type="number" name="costOfLeg" placeholder="costOfLeg" /> <br>
     <input type="submit" value="Save"/>
 </form> 
+</div>
+        
+        
+    
