--- a/views/user/createUser.hbs
+++ b/views/user/createUser.hbs
@@ -1,7 +1,8 @@
 <h1> Create New User</h1>
-
+<div id="container">
 <form action="/user" method="POST">
-    <input type="text" name="user" placeholder="user" /> <br>
-    <input type="text" name="password" placeholder="password" /> <br>
+    <input type="text" name="user" placeholder="Guest" /> <br>
+    <input type="text" name="password" placeholder="Add a Note" /> <br>
     <input type="submit" value="Save"/>
 </form>
+</div>
