--- a/views/voyage/editFormVoyage.hbs
+++ b/views/voyage/editFormVoyage.hbs
@@ -1,3 +1,4 @@
+<div id="container">
 <form action="/voyage/{{_id}}?_method=PUT" method="POST">
     <input type="text" name="nameTrip" placeholder="nameTrip" value="{{nameTrip}}"/> <br>
     <input type="text" name="whereFrom" placeholder="whereFrom" value="{{whereFrom}}"/> <br>
@@ -7,3 +8,4 @@
     <input type="boolean" name="flexibleDate" placeholder="flexibleDate" value="{{flexibleDate}}"/> <br>
     <input type="submit" value="Save"/>
 </form>
+</div>
