--- a/views/legger/allLegger.hbs
+++ b/views/legger/allLegger.hbs
@@ -1,5 +1,5 @@
     
-<div>Voyage Name</div> 
+{{!-- <div>Voyage Name</div>  --}}
 <h1>Legs</h1><a href="/legger/new/">Add Leg</a>
 <div id="container">
     <div class="contained" id="left">
@@ -10,10 +10,10 @@
             Hours Traveling: {{timeOfLeg}} <br>
             Initial:{{hubInitial}}<br>
             Terminus:{{hubTerminus}}</a>
-            <img src="../../public/image/plane-icon.png" alt="MF">
+            <img src="../../public/image/plane.png" alt="test">
         </div>
     {{/each}}
-    <img src="../../public/image/plane-icon.png" alt="MF">
+    <img src="../../public/image/plane.png" alt="test">
     </div>
     <div class="contained" id="playTable">
         <div class="row" id="1"></div>
