--- a/views/legger/allLegger.hbs
+++ b/views/legger/allLegger.hbs
@@ -10,10 +10,9 @@
             Hours Traveling: {{timeOfLeg}} <br>
             Initial:{{hubInitial}}<br>
             Terminus:{{hubTerminus}}</a>
-            <img src="../../public/image/plane.png" alt="test">
+            <img id="thumb" src="../image/plane.png" alt="test">
         </div>
     {{/each}}
-    <img src="../../public/image/plane.png" alt="test">
     </div>
     <div class="contained" id="playTable">
         <div class="row" id="1"></div>
