--- a/views/legger/allLegger.hbs
+++ b/views/legger/allLegger.hbs
@@ -1,4 +1,3 @@
-    
 {{!-- <div>Voyage Name</div>  --}}
 <h1>Legs</h1><a href="/legger/new/">Add Leg</a>
 <div id="container">
@@ -10,7 +9,9 @@
             Hours Traveling: {{timeOfLeg}} <br>
             Initial:{{hubInitial}}<br>
             Terminus:{{hubTerminus}}</a>
-            <img id="thumb" src="../image/plane.png" alt="test">
+            
+            <div class="image"></div>
+            
         </div>
     {{/each}}
     </div>
