--- a/views/user/singleUser.hbs
+++ b/views/user/singleUser.hbs
@@ -1,6 +1,6 @@
 <h1>entry : {{_id}}</h1>
 <div id="container">
-        <div id="singleusercon">
+        <div class="singleOnly" id="singleusercon">
 <p> guest: {{user}}</p>
 <p> note: {{password}}</p>
 <p> <a href="/voyage">Go to Voyages</a></p>
