--- a/views/voyage/singleVoyage.hbs
+++ b/views/voyage/singleVoyage.hbs
@@ -1,5 +1,5 @@
 <h1>{{singleVoyage._id}}</h1>
-<div id="container"> <div id="singlevoyagecon">
+<div id="container"> <div class="singleOnly" id="singlevoyagecon">
 <p> Trip Name: {{singleVoyage.nameTrip}}</p>
 <p> Origin: {{singleVoyage.whereFrom}}</p>
 <p> Destination: {{singleVoyage.whereTo}}</p>
