--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,8 @@
     <title>Voyage App</title>
     <link rel="stylesheet" href="/style.css" type="text/css">
     <script defer src="/script.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <header>
