--- a/views/legger/allLegger.hbs
+++ b/views/legger/allLegger.hbs
@@ -8,7 +8,7 @@
                 {{leg}} <div class="thumb">{{methodOfTransport}}</div><br> 
                 <h3><br>Start: {{hubInitial}} <br> End: {{hubTerminus}} <br><br></h3>
                 
-                <h2>$<div class="adder">{{costOfLeg}}</div> Hours: {{timeOfLeg}} <br></h2>
+                <h2>$<div class="val">{{costOfLeg}}</div> Hours: {{timeOfLeg}} <br></h2>
             </a>
             
             <div class="image"></div>
@@ -18,7 +18,11 @@
     </div>
     <div class="contained" id="playTable">
         <div class="row" id="1">
-            <div class="adder" id="uno"></div>
+            <div class="adder" id="uno"> 
+                H: 
+                <br>
+                $: 
+            </div>
         </div>
         <div class="row" id="2">
             <div class="adder" id="dos"></div>
