--- a/views/legger/allLegger.hbs
+++ b/views/legger/allLegger.hbs
@@ -19,16 +19,24 @@
     <div class="contained" id="playTable">
         <div class="row" id="1">
             <div class="adder" id="uno"> 
-                H: 
+                H: <div class="data" id=row1HoursData></div>
                 <br>
-                $: 
+                $: <div class="data" id=row1$Data></div>
             </div>
         </div>
-        <div class="row" id="2">
-            <div class="adder" id="dos"></div>
+        <div class="row" id="2"> 
+            <div class="adder" id="dos">
+                H: <div class="data" id=row2HoursData></div>
+                <br>
+                $: <div class="data" id=row2$Data></div>
+            </div>
         </div>
         <div class="row" id="3">
-            <div class="adder" id="tres"></div>
+            <div class="adder" id="tres">
+                 H: <div class="data" id=row3HoursData></div>
+                <br>
+                $: <div class="data" id=row3$Data></div>
+            </div>
         </div>
     </div>
 </div>
