--- a/views/legger/allLegger.hbs
+++ b/views/legger/allLegger.hbs
@@ -21,21 +21,21 @@
             <div class="adder" id="uno"> 
                 H: <div class="data" id=row1HoursData></div>
                 <br>
-                $: <div class="data" id=row1$Data></div>
+                $: <div class="data" id=row1SData></div>
             </div>
         </div>
         <div class="row" id="2"> 
             <div class="adder" id="dos">
                 H: <div class="data" id=row2HoursData></div>
                 <br>
-                $: <div class="data" id=row2$Data></div>
+                $: <div class="data" id=row2SData></div>
             </div>
         </div>
         <div class="row" id="3">
             <div class="adder" id="tres">
                  H: <div class="data" id=row3HoursData></div>
                 <br>
-                $: <div class="data" id=row3$Data></div>
+                $: <div class="data" id=row3SData></div>
             </div>
         </div>
     </div>
