hide name of trek, added class to enable hiding of trek

--- a/views/legger/allLegger.hbs
+++ b/views/legger/allLegger.hbs
@@ -5,7 +5,7 @@
     {{#each allLegger}}
         <div class="infoBlock">
             <a href="/legger/{{_id}}">
-                {{leg}} <div class="thumb">{{methodOfTransport}}</div><br> 
+                <div class="hideLegName">{{leg}}</div> <div class="thumb">{{methodOfTransport}}</div><br> 
                 <h3><br>Start: {{hubInitial}} <br> End: {{hubTerminus}} <br><br></h3>
                 
                 <h2>$<div class="val">{{costOfLeg}}</div> Hours: {{timeOfLeg}} <br></h2>
