--- a/public/style.css
+++ b/public/style.css
@@ -91,7 +91,7 @@ header, footer {
 	font-family: 'Shadows Into Light', cursive;
 }
 
-header, footer, .infoBlock, button, input, .row, .contained, .singleOnly, .adder{
+header, footer, .infoBlock, button, input, .row, .contained, .singleOnly, .adder, #allvoycon{
 	border-radius: 20px;
 }
 
@@ -143,7 +143,7 @@ header h1 a:hover, footer h1 a:hover {
 	height: 75%;
 	width: 95%;
 }
-#left, #playTable {
+#left, #playTable, #allvoycon {
 	background-color: rgba(var(--z) var(--y));
 	height: 99.5%;
 	width: 49%;
